--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "title": "Creative",
-    "name": "startbootstrap-creative",
+    "title": "Carlos Santana",
+    "name": "Portfolio",
     "version": "5.1.7",
     "scripts": {
         "build": "npm run build",
         "start": "node_modules/.bin/gulp watch"
     },
-    "description": "Creative is a stylish one page HTML theme for Bootstrap.",
+    "description": "Carlos Santana Portfolio",
     "keywords": [
         "css",
         "sass",
@@ -27,7 +27,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/BlackrockDigital/startbootstrap-creative.git"
+        "url": "https://github.com/Carlossantana987/Portfolio.git"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.9.0",
